device-dongle-user unlinking API made & API to generate Service Tickets made
