# src/models/req/ReqDevice.ts
@@ -1,0 +1,7 @@
+import { Device } from "../../entity/Device";
+
+export interface ReqDevice{
+    // id?: number,
+    mac_address?: string,
+    name?: string,
+}
