# src/models/req/ReqDongleAllot.ts
@@ -1,0 +1,3 @@
+export interface ReqDongleAllot{
+    id?: number
+}
