# src/models/res/ResDongle.ts
@@ -1,0 +1,4 @@
+export interface ResDongle{
+    id?: number,
+    name?: string
+}
